# Course-Scheduler

./: LICENSE  README.md  catalog.json  draft.hs  planner.cabal
.github/workflows/: haskell.yml  sync_sheets.yml
app/: Main.hs
app/src/: Main.hs  Scheduler.hs
app/src/Scheduler/: CLI.hs  Catalog.hs  Format.hs  Logic.hs  Solver.hs  Types.hs
test/: Spec.hs
util/: pyvenv.cfg  sync_sheet.py
