cabal-version:      3.0
name:               course-planner
version:            0.1.0.0
synopsis:           A constraint-based college course scheduler.
license:            MIT
author:             Matthew Vander Hoff
category:           Education
build-type:         Simple

library
    exposed-modules:  Scheduler
    hs-source-dirs:   app/src
    build-depends:    
        base >= 4.14 && < 5,
        containers,
        aeson,
        bytestring,
        text,
        unordered-containers
    default-extensions:
        DeriveGeneric,
        OverloadedStrings,
        DuplicateRecordFields
    default-language: Haskell2010
    ghc-options:      -Wall

executable planner
    main-is:          Main.hs
    hs-source-dirs:   app/src
    build-depends:    
        base >= 4.14 && < 5,
        course-planner
    default-extensions:
        DeriveGeneric,
        OverloadedStrings,
        DuplicateRecordFields
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    
        base >= 4.14 && < 5,
        course-planner,
        hspec,
        containers
    default-language: Haskell2010
    ghc-options:      -Wall
